--- a/src/pages/projects/index.css
+++ b/src/pages/projects/index.css
@@ -4,10 +4,12 @@
 }
 
 .content_container:after {
-    content: none;
+    height: 0;
+    padding: 0;
 }
 
 .project_container {
+    scroll-margin-top: 10rem;
     width: 100%;
     display: flex;
     justify-content: stretch;
